--- a/demo/styles.css
+++ b/demo/styles.css
@@ -44,10 +44,9 @@ margin: 5%;
 outline-style: none;
 border: none;
 padding: 1% 3%;
-font-family: 'Nunito', sans-serif;
-font-size: 1em;
-background-color: #EF9994;
-color: white;
+font-size: 3em;
+background-color: white;
+color: #EF9994;
 
 }
 
